Upgrade JDK 17 & Kotlin & QueryDSL